Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignTextObjTextObjWrapped.quorum
class Main
    action Main
        Text txt
        txt:SetValue("t")
        Text t = txt
        text x = txt:GetValue()
        output x
    end
end