Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjTextWrapped.quorum
class main
    action Main
        Text t = "text"
    end
end